Fix bugs and add comments

--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
         <li>Network (will be more useful during the 301)</li>
       </ul>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
